--- a/index.html
+++ b/index.html
@@ -1,34 +1,45 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
-<bun>
+<head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <head>
-        <leaves>
-            <cheese>
-            <meyo>
-        </leaves>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>Synx's Portfolio</h1>
-<h2>I am a Gamer</h2>
+    <h1>SyNx</h1>
+    <img src="./doggy.png" height="200" alt="me standing close to camera"/>
+</hr>
+
+<h2>Summary</h2>
+<p>I am a hardworking and dedicated person.</p>
+</hr>
+<h2>Education</h2>
+<p>Bachelor of Technology(2023-2027)</p>
+</hr>
+
+<h2>Work Experience</h2>
+<ul>
+    <h3><li>Event Hosting</li></h3>
+        <p>June 2023 - Present</p>
+            <li>Hosting different type of events in college</li>
+            <li>Planning tournaments</li>
+</ul>
 <hr/>
-<!-- TODO 5: Add a link to the project pages -->
-<h3><a href="./public/movie-ranking.html/">Movie Ranking Project</a></h3>
-<img src="./Screenshot 2025-07-17 204250.png" height="400"/>
-<!--HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:-->
-<h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-<img src="./public/Screenshot 2025-07-17 184207.png" height="400"/>
-<h3><p><a href="./public/contact.html">Contact Me</a></body></bun></html></p></h3>
+<h2>Skills</h2>
+<ul>
+    <li>Communication</li>
+    <li>Time Management</li>
+</ul>
+<hr>
+<h2>Awards and Certifications</h2>
+<ul>
+    <li>Best Event Organizer of the year</li>
+</ul>
+<hr>
+<h2>Other</h2>
+<ul>
+    <li><a href="./hobby.html">My Hobbies</a></li>
+    <li><a href="./contact.html">Contact Me</a></li>
+</ul>
 
 </body>
-</bun>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</html>
